unifi/poller/deployment-unifi-poller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-poller
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi-poller
    app.kubernetes.io/instance: unifi-poller
    app.kubernetes.io/managed-by: argoCD
spec:
  selector:
    matchLabels:
      app: unifi-poller
  template:
    metadata:
      labels:
        app: unifi-poller
    spec:
      priorityClassName: homelab-standard
      automountServiceAccountToken: false
      containers:
        - name: unifi-poller
          image: harbor.andreybondarenko.com/github/unpoller/unpoller:v5.4.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            tcpSocket:
              port: 9130
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 9130
            periodSeconds: 30
            timeoutSeconds: 15
            failureThreshold: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 9130
