unifi/poller/unifi-poller-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-poller
  namespace: unifi
spec:
  selector:
    matchLabels:
      app: unifi-poller
  template:
    metadata:
      labels:
        app: unifi-poller
    spec:
      containers:
        - name: unifi-poller
          image: harbor.andreybondarenko.com/github/unpoller/unpoller
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "2500m"
          ports:
            - containerPort: 9130
      imagePullSecrets:
        - name: my-private-registry
