unifi/poller/network-policy-unifi-poller-allow-egress-to-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-poller-allow-egress-to-prometheus
  namespace: unifi
spec:
  podSelector:
    matchLabels:
      app: unifi-poller
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3100
