unifi/poller/network-policy-unifi-poller-allow-egress-to-unifi-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-poller-allow-egress-to-unifi-controller
  namespace: unifi
spec:
  podSelector:
    matchLabels:
      app: unifi-poller
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.1/32
      ports:
        - protocol: TCP
          port: 443
