unifi/poller/network-policy-unifi-poller-allow-ingress-from-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-poller-allow-ingress-from-monitoring
  namespace: unifi
spec:
  podSelector:
    matchLabels:
      app: unifi-poller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9130
