unifi/poller/network-policy-unifi-poller-default-deny.yaml
# Network policy for Unifi poller in namespace unifi.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-poller-default-deny
  namespace: unifi
spec:
  podSelector:
    matchLabels:
      app: unifi-poller
  policyTypes:
    - Ingress
    - Egress
